--- a/yoga-frontend/package.json
+++ b/yoga-frontend/package.json
@@ -36,6 +36,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-animated-stopwatch-timer": "^1.3.0",
+    "react-native-calendars": "^1.1312.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.4",
     "react-native-reanimated": "~3.17.4",
